<resources>
    <string name="app_name">autolibDZ-onboard-computer</string>


    <!--Login PAGE-->
    <string name="codepin">Veuillez entrer le code PIN</string>
    <string name="vehicule">Espace réservé au véhicule</string>
    <!--END OF Login PAGE-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home fragments-->
    <string name="moneyToPay">Votre Forfait</string>
    <string name="estimateTime">Temp estime</string>
    <string name="timeLeft">Temp restant</string>

    <string name="departBorne">Borne de depart</string>
    <string name="arriveBorne">Borne d arrivee</string>
    <string name="cammande">Commandes</string>
    <string name="drive">Conduire</string>
    <string name="startDriving">Demarer le véhicule </string>
    <string name="navigate">Naviguer</string>
    <string name="stopCar">Quitter le véhicule</string>
    <string name="unite">DA</string>
    <string name="mssgAlert">Veulliez quitter le vehicule immediatement ou vous serait facturer d’une sanction en</string>

    <!--mapbox-->
    <string name="access_token">pk.eyJ1IjoibWN6IiwiYSI6ImNrcG84OHQ2ejBhd2kydm1uenBwb3Y2bDcifQ.Gxn6kINp46z61MU2RXkO2Q</string>

    <!--Signelemnt de pannes-->
    <string-array name="panne_moteur">
        <item>Problèmes d’allumage moteur</item>
        <item>Une baisse de puissance et de performance</item>
        <item>Problèmes de combustion</item>
        <item>Bougies d’allumage en panne</item>
    </string-array>

    <string-array name="panne_m">
        <item>Problèmes d’allumage moteur</item>
        <item>Une baisse de puissance et de performance</item>
        <item>Problèmes de combustion</item>
        <item>Bougies d’allumage en panne</item>
    </string-array>

    <string-array name="panne_q">
        <item>Problèmes d’allumage moteur</item>
        <item>Une baisse de puissance et de performance</item>
        <item>Problèmes de combustion</item>
        <item>Bougies d’allumage en panne</item>
    </string-array>

    <string name="prompt">Select Mode</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiY2hlcmd1aTMxIiwiYSI6ImNrcHA4bXZzYzB0aW8ydW51MjV1Njl5aDAifQ.Be0Z0LsDR03gT0nTidZ-qA</string>

    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <!--FIN Signelemnt de pannes-->
</resources>